<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PassengerFragment"
    android:gravity="bottom"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_rni_in"
            android:textColor="#505050"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="22sp"
            android:textColor="#353535"
            android:text="@string/zaur_kamalov"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_rketm_aral"
            android:textSize="20sp"
            android:textColor="#505050"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="22sp"
            android:textColor="#353535"
            android:text="@string/_14_00_15_00"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qeydl_r"
            android:textSize="20sp"
            android:textColor="#505050"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="22sp"
            android:textColor="#353535"
            android:text="@string/siqaret_kilm_sin_y_k_olaraq_ortaboylu_amadan_m_var"/>



    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
         android:padding="16dp"
         android:gravity="bottom|center"
         android:orientation="vertical">


         <com.google.android.material.button.MaterialButton
             android:id="@+id/call_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/z_ng_et"
             app:icon="@drawable/call"
             app:iconTint="#353535"
             android:layout_marginBottom="16dp"
             android:textAllCaps="false"
             android:textColor="#353535"
             android:textSize="20sp"
             app:cornerRadius="8dp"
             android:backgroundTint="#86D978"/>

         <com.google.android.material.button.MaterialButton
        android:id="@+id/sorgu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sor_u_g_nd_r"
        android:textAllCaps="false"
        android:textColor="#353535"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        android:backgroundTint="#F2C94C"/>




     </LinearLayout>
</LinearLayout>